--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,6 +86,7 @@ body.dark-theme {
 .nav__btns {
     display: flex;
     align-items: center;
+    margin-right: 1rem;
 }
 
 .change-theme {
@@ -108,6 +109,7 @@ body.dark-theme {
 
 html {
     scroll-behavior: smooth;
+    scroll-padding-top: 200px; /* Adjust based on your header height */
 }
 
 body {
@@ -138,7 +140,7 @@ img {
 
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
-    padding: 2rem 0 4rem;
+    padding: 2rem 0 1rem;
 }
 
 .section__title {
@@ -148,7 +150,7 @@ img {
 .section__subtitle{
     display: block;
     font-size: var(--small-font-size);
-    margin-bottom: var(--mb-3);
+    margin-bottom: var(--mb-1);
 }
 
 .section__title,
@@ -184,12 +186,16 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px snow #e0e0e0; /* Grey bottom border */
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05); /* Shadow only below */
 }
 
 .nav__logo,
 .nav__toggle{
-    color: var(--title-color);
+    color: var(--first-color);
     font-weight: var(--font-medium);
+    font-size: large;
+    padding: 8px;
 }
 
 .nav__logo:hover{
@@ -414,8 +420,11 @@ img {
 
 .about__info {
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     margin-bottom: var(--mb-2-5);
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
 }
 
 .about__info-title {
@@ -1089,12 +1098,11 @@ img {
 
 .footer__bg {
     background-color: var(--first-color-second);
-    padding: 2rem 0 3rem;
+    padding: 1rem 0 1rem;
 }
 
 .footer__title {
     font-size: var(--h4-font-size);
-    margin-bottom: var(--mb-0-25);
 }
 
 .footer__subtitle {
@@ -1112,8 +1120,8 @@ img {
 }
 
 .footer__social {
-    font-size: 1.25rem;
-    margin-right: var(--mb-1-5);
+    font-size: 1.1rem;
+    margin-right: 0.7rem;
 }
 
 .footer__social:hover {
@@ -1261,8 +1269,11 @@ img {
     .about__container,
     .portfolio__container,
     .project__container,
-    .contact__container,
     .footer__container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .contact__container {
         grid-template-columns: repeat(2, 1fr);
     }
 
@@ -1303,11 +1314,11 @@ img {
     }
 
     .section {
-        padding: 6rem 0 2rem;
+        padding: 3rem 0 1rem;
     }
 
     .section__subtitle {
-        margin-bottom: 4rem;
+        margin-bottom: 1rem;
     }
 
     .header {
@@ -1323,7 +1334,9 @@ img {
 
     .logo__box {
         padding: 0.2rem 1rem;
-        border: 1px solid var(--first-color);
+        /* border: 1px solid #EA672E; */
+        /* background-color: var(--first-color);
+        border-radius: 3px; */
     }
 
     .nav {
@@ -1355,7 +1368,7 @@ img {
     }
 
     .home__content {
-        padding-top: 5.5rem;
+        padding-top: 3.5rem;
         column-gap: 2rem;
     }
 
@@ -1386,7 +1399,10 @@ img {
     }
 
     .about__info {
-        justify-content: space-between;
+        /* justify-content: space-between; */
+        gap: 30px;
+        justify-content: center;
+        flex-wrap: wrap;
     }
 
     .about__buttons {
@@ -1455,7 +1471,7 @@ img {
     }
 
     .footer__bg{
-        padding: 3rem 0 3.5rem;
+        padding: 1rem 0 1rem;
     }
 
     .footer__links{
